apps/python-api/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-api
spec:
  hosts:
  - "*"
  gateways:
  - test-api-gateway
  http:
  - match:
    - uri:
        prefix: /test
    rewrite:
      uri: /
    route:
    - destination:
        host: test-api-service
        port:
          number: 80
